--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/register": "^7.17.7",
     "gulp": "^4.0.2"
+  },
+  "dependencies": {
+    "yargs": "^17.5.1"
   }
 }
