--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/register": "^7.17.7",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-if": "^3.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.52.1"
   },
