--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.52.1"
   },
   "dependencies": {
