--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^5.1.0",
     "sass": "^1.52.1",
     "webpack-stream": "^7.0.0"
   },
