--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "jquery": "^3.6.0",
+    "normalize.css": "^8.0.1",
+    "slick-carousel": "^1.8.1",
     "yargs": "^17.5.1"
   }
 }
