--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
+    "gulp-wp-pot": "^2.5.0",
     "gulp-zip": "^5.1.0",
     "sass": "^1.52.1",
     "webpack-stream": "^7.0.0"
